<resources>
    <string name="app_name">Parus 8 Claims</string>

    <string name="action_settings">Settings</string>
    <string name="error_title">Error</string>
    <string name="authorizing">Authorizing in the system</string>
    <string name="retrieving_list">Retrieving the claims list</string>
    <string name="my_list_header">Claims you have to process</string>
    <string name="action_search">Search</string>
    <string name="action_help">Help</string>
    <string name="title_activity_filters">FiltersActivity</string>
    <string name="stores_queries">Stored queries</string>
    <string name="add_query">Add query</string>
    <string name="title_activity_filter_editor">FilterEditor</string>
    <string name="query_editor">Query</string>
    <string name="general">General</string>
    <string name="number">Number</string>
    <string name="release">Release</string>
    <string name="version">Version</string>
    <string name="build">Build</string>
    <string name="all">All</string>
    <string name="please_wait">Please wait…</string>
    <string name="loading_unitlist">Loading Units…</string>
    <string name="unit">Unit</string>
    <string name="system">System</string>
    <string name="app">Application</string>
    <string name="loading_applist">Loading Applications…</string>
    <string name="pref_header_account">Account</string>
    <string name="pref_header_cache">Cache</string>
    <string name="refresh_cache">Refresh the dictionary cache</string>
    <string name="all_ass_with_unit">All associated with unit</string>
    <string name="header_mine">Personal</string>
    <string name="im_init">I\'m an initiator</string>
    <string name="im_exec">I\'m an executor</string>
    <string name="header_content">Content</string>
    <string name="save">Save</string>
    <string name="exec">Execute</string>
    <string name="save_n_exec">Save and Execute</string>
    <string name="querys_name">Query\'s name:</string>
    <string name="loading">Loading data…</string>
    <string name="clear">Clear</string>
    <string name="delete">Delete</string>
    <string name="title_activity_claim">ClaimActivity</string>
    <string name="action_claim_edit">Edit</string>
    <string name="pass_on">Pass on</string>
    <string name="act_return">Return</string>
    <string name="act_send">Send to</string>
    <string name="act_close">Revoke</string>
    <string name="act_add_note">Add Note</string>
    <string name="act_add_file">Add File</string>
    <string name="claim_number">Number:</string>
    <string name="claim_type">Type:</string>
    <string name="claim_type_addon">Add-on</string>
    <string name="claim_type_rebuke">Rebuke</string>
    <string name="claim_type_error">Error</string>
    <string name="claim_initiator">Initiator:</string>
    <string name="claim_date_reg">at:</string>
    <string name="claim_application">Application:</string>
    <string name="claim_unit">Unit:</string>
    <string name="claim_unitfunc">Action:</string>
    <string name="claim_release_build">Release.Build:</string>
    <string name="claim_build">Build:</string>
    <string name="claim_release">Release:</string>
    <string name="claim_release_fix">Fix release:</string>
    <string name="claim_state">State:</string>
    <string name="claim_state_g">State</string>
    <string name="claim_executor">Executor:</string>
    <string name="claim_date_change">since:</string>
    <string name="claim_priority">Priority:</string>
    <string name="act_snote">added a note</string>
    <string name="act_sforward">switched the claim to state</string>
    <string name="act_snull">revoked the claim</string>
    <string name="act_sreturn">returned the claim to state</string>
    <string name="act_ssend">redirected the claim</string>
    <string name="act_supdate">change the claim\'s text</string>
    <string name="act_sinsert">added the claim</string>
    <string name="attached_docums">Attached documents</string>
    <string name="exec_type">Executor type</string>
    <string name="title_activity_claim_action">ClaimActionActivity</string>
    <string name="claim_content">Content:</string>
    <string name="release_where_found">Release where found</string>
    <string name="release_to_fix">Release to fix</string>
    <string name="claim_typeh">Type</string>
    <string name="action_claim_add">Add</string>
    <string name="deleting">Deleting</string>
    <string name="delete_confirm">Are you sure you want to delete the claim No. %s?</string>
    <string name="closing">Revoking</string>
    <string name="close_confirm">Are you sure you want to revoke the claim No. %s?</string>
    <string name="editing">Editing</string>
    <string name="adding">Adding</string>
    <string name="claim_note">Note</string>
    <string name="executor">Executor</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_user_name">UserName</string>
    <string name="pref_title_password">Password</string>
    <string name="connection_time_out">Connection timed out</string>
    <string name="server_unreachable">Server is unreachable.</string>
    <string name="refreshing_cache">Refreshing chache…</string>
    <string name="connect_to_server">Connecting to pmo server…</string>
    <string name="no_datafound">No data found according your condition.</string>
    <string name="uploading_file">Uploading file…</string>
    <string name="loading_releases">Loading Releases…</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="guest_enter">Guest login</string>
    <string name="pref_header_iface">Interface</string>
    <string name="use_condensed_font">Use narrow font</string>
    <string name="dowloading_file">Downloading the file…</string>
    <string name="claims">Claims</string>
    <string name="settings_choose_language">Language</string>
    <string name="settings_category_about">About</string>
    <string name="settings_changelog">Changelog</string>
    <string name="new_update_available">A new version of the application is available, would you like to update?</string>
    <string name="update">Update</string>
    <string name="not_now">Not now</string>
</resources>
