<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_header_account">
        <EditTextPreference
            android:capitalize="none"
            android:inputType="textNoSuggestions"
            android:key="username"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_user_name"/>
        <EditTextPreference
            android:capitalize="none"
            android:inputType="textPassword"
            android:key="password"
            android:maxLines="1"
            android:password="true"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_password"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_header_iface">
<CheckBoxPreference
    android:key="use_condensed_font"
    android:defaultValue="true"
    android:title="@string/use_condensed_font"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_header_cache">
        <Preference
            android:key="cache"
            android:title="@string/refresh_cache"/>
    </PreferenceCategory>

</PreferenceScreen>
