<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="ua.parus.pmo.parus8claims.objects.claim.ClaimActivity">
    <item android:id="@+id/action_claim_return"
        android:title="@string/act_return"
        android:orderInCategory="10"
        android:icon="@drawable/ic_action_undo"
        app:showAsAction="always|withText"/>
    <item android:id="@+id/action_claim_forward"
        android:title="@string/pass_on"
        android:orderInCategory="20"
        android:icon="@drawable/ic_action_forward"
        app:showAsAction="always|withText"/>
    <item android:id="@+id/action_claim_add_note"
        android:title="@string/act_add_note"
        android:orderInCategory="40"
        android:icon="@drawable/ic_action_new_event"
        app:showAsAction="always|withText"/>
    <item android:id="@+id/action_claim_add_file"
        android:title="@string/act_add_file"
        android:orderInCategory="50"
        android:icon="@drawable/ic_action_new_attachment"
        app:showAsAction="always|withText"/>
    <item android:id="@+id/action_claim_send"
          android:title="@string/act_send"
          android:orderInCategory="55"
          android:icon="@drawable/ic_action_add_person"
          app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_claim_edit"
        android:title="@string/action_claim_edit"
        android:orderInCategory="60"
        android:icon="@drawable/ic_action_edit"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_claim_close"
        android:title="@string/act_close"
        android:orderInCategory="70"
        android:icon="@drawable/ic_action_secure"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_claim_delete"
        android:title="@string/delete"
        android:orderInCategory="80"
        android:icon="@drawable/ic_action_discard"
        app:showAsAction="ifRoom|withText"/>
</menu>
