<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ua.parus.pmo.parus8claims.FilterOneActivity">
    <item
        android:id="@+id/action_save_query"
        android:title="@string/save_n_exec"
        android:icon="@drawable/ic_action_save"
        android:orderInCategory="10"
        app:showAsAction="always|withText"
        />
    <item
        android:id="@+id/action_exec_query"
        android:title="@string/exec"
        android:icon="@drawable/ic_action_send_now"
        android:orderInCategory="20"
        app:showAsAction="always|withText"
        />
    <item
        android:id="@+id/action_clear_query"
        android:title="@string/clear"
        android:icon="@drawable/ic_action_erase"
        android:orderInCategory="30"
        app:showAsAction="always|withText"
        />
    <item
        android:id="@+id/action_delete_query"
        android:title="@string/delete"
        android:icon="@drawable/ic_action_discard"
        android:orderInCategory="40"
        app:showAsAction="always|withText"
        />
    <item
        android:id="@+id/action_help_query"
        android:title="@string/action_help"
        android:icon="@drawable/ic_action_help"
        android:orderInCategory="100"
        app:showAsAction="never"
        />

</menu>
