<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="10"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="90"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:icon="@drawable/ic_action_help"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        />


</menu>
