<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ua.parus.pmo.parus8claims.FilterOneActivity">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/general"
                android:id="@+id/feGrHeadGeneral"
                style="@style/form_group_header_first"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/number"
                    android:id="@+id/feNumberLabel"
                    android:gravity="bottom"
                    style="@style/form_label"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/feNumberEdit"
                    android:gravity="end"
                    android:inputType="text"
                    tools:ignore="TextFields"/>


            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/system"
                style="@style/form_group_header"
                android:id="@+id/feGrHeadSystem"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/unit"
                    android:id="@+id/feUnitsLabel"
                    style="@style/form_label"
                    android:gravity="bottom" />
                <MultiAutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/feUnitsText"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/app"
                    android:id="@+id/feAppLabel"
                    style="@style/form_label"
                    android:gravity="bottom" />
                <MultiAutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/feAppText"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/release"
                style="@style/form_group_header"
                android:id="@+id/feGrHeadRelease"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/version"
                    android:id="@+id/feVersionLabel"
                    style="@style/form_label"
                    android:gravity="bottom" />
                <ua.parus.pmo.parus8claims.gui.MultiSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/feVersionSpinner"
                    android:spinnerMode="dropdown"
                    android:gravity="end"
                    android:layout_gravity="end" />

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/release"
                    android:id="@+id/feReleaseLabel"
                    style="@style/form_label"
                    android:gravity="bottom" />
                <ua.parus.pmo.parus8claims.gui.MultiSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/feReleaseSpinner"
                    android:spinnerMode="dropdown"
                    android:gravity="end"
                    android:layout_gravity="end" />

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/build"
                    android:id="@+id/feBuildLabel"
                    style="@style/form_label"
                    android:gravity="bottom" />
                <ua.parus.pmo.parus8claims.gui.MultiSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/feBuildSpinner"
                    android:spinnerMode="dropdown"
                    android:gravity="end"
                    android:layout_gravity="end" />

            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_mine"
                style="@style/form_group_header"
                android:id="@+id/feGrHeadMine"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/im_init"
                android:id="@+id/feImInit"
                style="@style/check_box" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/im_exec"
                android:id="@+id/feImExec"
                style="@style/check_box" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_content"
                style="@style/form_group_header"
                android:id="@+id/feGrHeadContent"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/feContent"
                android:inputType="text" />

        </LinearLayout>
    </ScrollView>



</LinearLayout>
